--- a/src/components/common/aq-transaction-table.html
+++ b/src/components/common/aq-transaction-table.html
@@ -1,16 +1,16 @@
-<link rel='import' href='../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
-<link rel='import' href='../../../../bower_components/iron-pages/iron-pages.html'>
+<link rel='import' href='../../../bower_components/iron-pages/iron-pages.html'>
 
-<link rel='import' href='../../../../bower_components/iron-selector/iron-selector.html'>
+<link rel='import' href='../../../bower_components/iron-selector/iron-selector.html'>
 
-<link rel="import" href="../../../../bower_components/vaadin-grid/vaadin-grid.html">
-<link rel="import" href="../../../../bower_components/vaadin-grid/vaadin-grid-sorter.html">
-<link rel="import" href="../../../../bower_components/vaadin-grid/vaadin-grid-filter.html">
+<link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid.html">
+<link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid-sorter.html">
+<link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid-filter.html">
 
 <link rel="import" href="./aq-twoway-toggle.html">
 
-<script src="../../../../resources/scripts/DateTime.js"></script>
+<script src="../../../resources/scripts/DateTime.js"></script>
 
 <dom-module id='aq-transaction-table'>
 	<style>
