--- a/src/components/common/aq-twoway-toggle.html
+++ b/src/components/common/aq-twoway-toggle.html
@@ -1,5 +1,5 @@
-<link rel='import' href='../../../../bower_components/paper-tabs/paper-tabs.html'>
-<link rel='import' href='../../../../bower_components/paper-tabs/paper-tab.html'>
+<link rel='import' href='../../../bower_components/paper-tabs/paper-tabs.html'>
+<link rel='import' href='../../../bower_components/paper-tabs/paper-tab.html'>
 
 <dom-module id='aq-twoway-toggle'>
 	<style>
