--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -312,7 +312,7 @@
                 'close-drawer': 'closeDrawer',
                 'save-action': 'saveStrategy',
                 'run-action': 'runStrategy',
-                'cloneClicked': 'cloneStrategy',
+                'clone-strategy-clicked': 'cloneStrategy',
                 'backClicked-backtest': 'toggleIsRunning',
                 'scroll-log': 'onScroll',
                 'save-request': 'onSaveRequest',
