--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -80,7 +80,7 @@
         <div id="menu-container" class="layout horizontal">    
             <paper-checkbox noink class="checkbox-all self-center" checked="{{checkAll}}"
                             on-change='onCheckAllStrategies'></paper-checkbox>
-            <p class="strategy-header self-center">[[heading]]</p>
+            <div class="strategy-header self-center">[[heading]]</div>
             
             <div class="flex"></div>
             
