--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -359,11 +359,11 @@
             },
 
             onCreate: function () {
-                this.fire('newClicked');
+                this.fire('create-strategy-clicked');
             },
 
             onClone: function () {
-                this.fire('cloneClicked');
+                this.fire('clone-strategy-clicked');
             },
 
             onRun: function () {
