--- a/src/components/aq-html-editor.html
+++ b/src/components/aq-html-editor.html
@@ -1,16 +1,23 @@
-<link rel="import" href="../../my_bower_components/polymer-quill/polymer-quill.html">
+<link rel="import" href="../../bower_components/polymer-quill/polymer-quill.html">
 <dom-module id="aq-html-editor">
     <style>
         polymer-quill.full {
             --polymer-quill-editor-max-height: 300px;
-            --polymer-quill-editor-min-height: 150px;
+            --polymer-quill-editor-min-height: 250px;
+            font-size: 18px !important;
+
         }
-        polymer-quill{
+        polymer-quill {
             box-shadow: var(--aq-html-editor-box-shadow,0 0px 0px rgba(0,0,0,0.2));
             border-radius: 4px;
-            border:var(--aq-html-editor-border,1px solid #e7e7e7);
+            font-size: 18px !important;
             font-family: 'Lato', sans-serif;
-            font-size: 15px;
+            border:var(--aq-html-editor-border,1px solid #e7e7e7);
+            
+            --polymer-quill-editor-min-height: 250px;
+            --polymer-quill: {
+                font-size: 18px !important;
+            };
         }
     </style>
     <template>
@@ -26,7 +33,7 @@
                 return this.$.poly_quill_content.getHTML();
             },
             clearContent: function () {
-                this.$.poly_quill_content.clearEditor();
+                this.$.poly_quill_content.resetContent();
             }
         });
     </script>
