--- a/src/components/common/aq-log-item.html
+++ b/src/components/common/aq-log-item.html
@@ -1,6 +1,6 @@
-<link rel='import' href='../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
-<dom-module id='aq-log-item'>
+<!--dom-module id="aq-log-ite">
 	
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
@@ -62,9 +62,9 @@
 
 	<script>
 		Polymer({
-			is:'aq-log-item',
+			is: "aq-log-ite",
 
-			properties:{
+			properties: {
 				message:String,
 				messageType:String,
 				datetime:String,
@@ -105,4 +105,4 @@
 			},
 		});
 	</script>
-</dom-module>
+</dom-module-->
