--- a/src/components/common/aq-navigation-item.html
+++ b/src/components/common/aq-navigation-item.html
@@ -70,7 +70,7 @@
 
 				switch (page) {
 					case "Home": 
-						route = '/'; 
+						route = '/main'; 
 						break;
 					case "Research": 
 						route = '/dashboard'; 
