--- a/src/components/common/aq-portwidth-detector.html
+++ b/src/components/common/aq-portwidth-detector.html
@@ -1,17 +1,17 @@
-<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html">
+<link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html">
 
 <dom-module id='aq-portwidth-detector'>
 	<template>
-		<iron-media-query query="(min-width: 1250px)" query-matches="{{superWide}}"></iron-media-query>
+		<iron-media-query query="(min-width: 1101px)" query-matches="{{superWide}}"></iron-media-query>
 
-        <iron-media-query query="(min-width: 800px) and (max-width: 1249px)" query-matches="{{wide}}">
+        <iron-media-query query="(min-width: 901px) and (max-width: 1100px)" query-matches="{{wide}}">
         </iron-media-query>
 
-        <iron-media-query query="(max-width: 800px)" query-matches="{{semiWide}}"></iron-media-query>
+        <iron-media-query query="(min-width: 701px) and (max-width:900px)" query-matches="{{semiWide}}"></iron-media-query>
       	
-      	<iron-media-query query="(max-width: 640px)" query-matches="{{narrowWide}}"></iron-media-query>
+      	<iron-media-query query="(min-width: 561px) and (max-width: 700px)" query-matches="{{narrowWide}}"></iron-media-query>
       
-        <iron-media-query query="(max-width:560px)" query-matches="{{narrow}}"></iron-media-query>
+        <iron-media-query query="(min-width:300px) and (max-width:5601)" query-matches="{{narrow}}"></iron-media-query>
 
          <!--iron-media-query query="(min-width: 0px)" query-matches="{{veryNarrow}}"></iron-media-query-->
 	</template>
@@ -23,36 +23,30 @@
 				superWide: {
 					type: Boolean,
 					value: true,
-					//notify: true,
 				},
 
 				wide: {
 					type: Boolean,
 					value: true,
-					//notify: true,
 				},
 
 				semiWide: {
 					type: Boolean,
 					value: true,
-					//notify: true,
 				},
 
 				narrowWide: {
 					type: Boolean,
 					value: true,
-					//notify: true,
 				},
 
 				narrow: {
 					type: Boolean,
 					value: true,
-					//notify: true,
 				},
 
 				width: {
 					type: Object,
-					//value: {},
 					notify: true,
 				},
 			},
