--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -5,8 +5,6 @@
 <link rel='import' href='../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../../../bower_components/iron-pages/iron-pages.html'>
 <link rel='import' href='../../../../bower_components/paper-progress/paper-progress.html'>
-<!--link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"-->
-
 <link rel="import" href="../../../../bower_components/juicy-ace-editor/juicy-ace-editor.html">
 
 <link rel='import' href='../aq-check-authentication.html'>
@@ -235,6 +233,7 @@
 
                 active: {
                     type: Boolean,
+                    value: false,
                     observer: '_activeChanged',
                 },
 
