--- a/src/components/common/backtest/aq-forwardtest-detail-item.html
+++ b/src/components/common/backtest/aq-forwardtest-detail-item.html
@@ -275,7 +275,7 @@
                         
                     </div>
                     <div class="flex"></div>
-                    <div class="layout horizontal center">
+                    <div class="layout horizontal start">
                         
                         <template is='dom-if' if='[[hasActionButton(forwardtest.error)]]'>
                             <paper-button raised on-tap='onActionButton' noink 
