--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -5,8 +5,9 @@
 <link rel="import" href="./aq-community-postdetail-content.html">
 <link rel="import" href="../aq-profile-img.html">
 <link rel='import' href='../../icons/aq-iconset.html'>
-<!--link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"-->
 <link rel="import" href="../common/aq-profile-pic-element.html">
+<script src="../../../resources/scripts/DateTime.js"></script>
+
 <dom-module id="aq-community-postdetail-header">
 
     <style include="iron-flex iron-flex-alignment iron-positioning">
@@ -166,7 +167,7 @@
             </div>
 
             <div id='author' class="layout horizontal center">
-                <aq-profile-img class="self-center" id='img' letter="[[getinitials(postHeader)]]" class="self-end"></aq-profile-img>
+                <aq-profile-img class="self-center" id='img' name="[[postHeader.user.firstName]][[postHeader.user.lastName]]" class="self-end"></aq-profile-img>
                 
                 <div> 
                     <div id='author-detail'> 
@@ -295,20 +296,8 @@
 
             },
 
-            getinitials: function (item) {
-                if (item && item.user) {
-                    return item.user.firstName[0] + item.user.lastName[0];
-                } else
-                    return "";
-            },
-
-            format: function (date) {
-                var options = {
-                    weekday: "long", year: "numeric", month: "short",
-                    day: "numeric", hour: "2-digit", minute: "2-digit"
-                };
-
-                return new Date(date).toLocaleTimeString("en-us", options);
+            format: function (d) {
+               return date.formatDateLocale(d);
             },
 
         });
